fix: Unexpected error when admin user connects to the Portal
https://gravitee.atlassian.net/browse/APIM-9924
(cherry picked from commit a19625a21d18cd1213aa606e031d8db0edc250e0)